<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_library_books"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingBottom="10dp"
        >
        
        <Button 
            android:layout_width="50dp"
            android:id="@+id/go"
            android:layout_height="wrap_content"
            android:text="@string/GO"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            />
    
    	<AutoCompleteTextView
    	    android:id="@+id/search"
    	    android:layout_width="match_parent"
    	    android:layout_height="50dp"
    	    android:cursorVisible="true"
    	    android:textColor="@android:color/white" />
    	
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radiog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp" >

        <RadioButton
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:checked="true"
            android:alpha="1"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Author"
            
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/pub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Publisher"
            android:textColor="@android:color/white" />
    </RadioGroup>
    
    <ListView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        
        ></ListView>

</LinearLayout>
