<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AttendanceActivity" 
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:textSize="19sp"
        android:textStyle="bold"
        android:paddingBottom="15dp" />
    
    <Button 
        android:id="@+id/initialDate"
        android:text="@string/FROM"
        android:layout_below="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        />
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/iDate"
        android:layout_alignLeft="@+id/initialDate"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/initialDate"
        android:textColor="@android:color/white"
        ></TextView>
    
    <Button 
        android:id="@+id/finalDate"
        android:text="@string/TO"
        android:layout_alignBottom="@+id/initialDate"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:fadingEdgeLength="6dp"
        />
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fDate"
        android:layout_alignRight="@+id/finalDate"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/finalDate"
        android:textColor="@android:color/white"
    	></TextView>
    <TextView 
        android:id="@+id/per"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textSize="50sp"
        android:typeface="serif"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="-"
        />
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/total"
        android:layout_alignLeft="@+id/per"
        android:paddingLeft="10dp"
        android:text="@string/total"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/per"
        android:textColor="@android:color/holo_blue_light"
        />
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/actual"
        android:layout_alignRight="@+id/per"
        android:paddingRight="8dp"
        android:text="@string/actual"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/per"
        android:textColor="@android:color/holo_blue_light"
        />
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/totperiod"
        android:layout_alignLeft="@+id/per"
        android:paddingLeft="35dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/total"
        android:textColor="@android:color/white"
        />
	<TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/atnperiod"
        android:layout_alignRight="@+id/per"
        android:paddingRight="45dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/actual"
        android:textColor="@android:color/white"
        />
	
	
</RelativeLayout>
